DE2486 - Stream layout on iphone 6 broken Fix overlapping articles in horizontal slider on iphone6.

--- a/crossroads.net/styles/pages/streaming.scss
+++ b/crossroads.net/styles/pages/streaming.scss
@@ -1103,6 +1103,7 @@ streaming, landing {
       content-card {
         background-color: #FFF;
         margin-right: 1em;
+        min-width: 225px;
 
         &:last-of-type {
           margin-right: 0;
